corrected readme error

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,4 +22,4 @@ library(connectR)
 src_connectR("PostgreSQL35W")->post
 ```
 
-**Note: connectR is in infancy it's infancy**
+**Note: connectR is in it's infancy**
