--- a/vignettes/Advanced_guide_to_connectR.Rmd
+++ b/vignettes/Advanced_guide_to_connectR.Rmd
@@ -105,7 +105,7 @@ Let's start with a complicated dataset.
 read_csv("D:/Program_Files/R_Code/Projects/Kaggle/1. Data/Pokemon.csv")-> Pokemon
 names(Pokemon)
 ```
-This data.frame contains " " and "." within the variable titles. This can causes issues when sending this data frame to a database. However connectR has built in feature when sending over to databses. let's see how connectR can handle this situation.
+This data.frame contains " " and "." within the variable titles. This can causes issues when sending this data frame to a database. However connectR has some built in feature to handle this. let's see how connectR can handle this situation.
 ```{r, fig.show='hold'}
 # split the data.frame into test and predict.
 test<-sample_frac(Pokemon,0.8)
@@ -113,15 +113,14 @@ predict<-setdiff(Pokemon,test)
 
 copy_to(post,test,"testtable",indexes=list(c("type_1","type_2")),primary=c("x","name"))
 ```
-It is as easy as that, connectR will do the hard work of convert R data types into the relavent databases. connectR has created the primary keys "x" and "name" alsoand index "type_1" and "type_2". It also has converted "." and " " so that the user don't have to worry. What about inserting new data into a data table.
-```{r, fig.show='hold'}
-copy_to(post,predict,"testtable",append=T)
-
-```
-connectR will also take care of the inserting into to a database when the value names haven't been converted to match the database version.
+It is as easy as that, connectR will do the hard work of convert R data types into the relavent databases. connectR has created the primary keys "x" and "name" alsoand index "type_1" and "type_2". It also has converted "." and " " so that the user doesn't have to worry. What about inserting new data into a data table? connectR will also take care of the inserting into to a database even when the value names haven't been converted to match the database version, for example:
 ```{r, fig.show='hold'}
 names(predict)
 tbl(post,"testtable") %>% collect %>% names
+```
+```{r, fig.show='hold'}
+copy_to(post,predict,"testtable",append=T)
+
 ```
 Finally how do we know if connectR has created a primary key/ index and index on the table `testtable`?
 ```{r, fig.show='hold'}
@@ -149,9 +148,26 @@ tbl(post,sql("select
          table_name  %like% 'test%') %>%
   select (1,3,type)
 ```
-Here we use a combination of SQL and R code to query the database. From here we can see that primary keys "x" and "name" have been create, also "type_1", "type_2" has been created as indexes. From this we can see connectR offers alot of functionality for R to connect databases.
+Here we can use a combination of SQL and R code to query the database. From here we can see that primary keys "x" and "name" have been create, also "type_1", "type_2" has been created as indexes. From this we can see connectR offers alot of functionality for R to connect databases.
 
 Lets clear up the database.
+```{r, fig.show='hold'}
+db_drop_table(post$con,"testtable")
+```
+
+## How to transfer tables from intial database to the next `copy_loop_to`
+Finally connectR allows tables to be transferred from the initial database to another. This is helpful when 2 databases do not communicate with one another. `copy_loop_to` transfers tables in batch so that it doesn't overload R's memory. `copy_loop_to` will only send data to a existing table on the target database. To do this we can use the `db_create_primary` function to create an empty table with primary keys or indexes. We can the use `copy_loop_to` function for the transfer.
+
+```{r, fig.show='hold'}
+tbl(post,sql("select * from kaggle_beers")) %>% collect->test
+
+db_create_primary(post, "testtable", test, c("x1","name"))
+
+copy_loop_to(conn1=post, name="testtable", n=100, statement="select * from kaggle_beers")
+```
+**NOTE: If `conn2` is not provided then `copy_loop_to` will send the table's data to `conn1` connection. **
+
+Clearing down database.
 ```{r, fig.show='hold'}
 db_drop_table(post$con,"testtable")
 ```
