--- a/vignettes/Advanced_guide_to_connectR.Rmd
+++ b/vignettes/Advanced_guide_to_connectR.Rmd
@@ -4,9 +4,9 @@ author: "Dyfan Jones"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  %/VignetteIndexEntry{Vignette Title}
+  %/VignetteEngine{knitr::rmarkdown}
+  %/VignetteEncoding{UTF-8}
 ---
 
 ##Lazy methods to send queries to Database
@@ -46,9 +46,9 @@ db_send_query(post,"insert into kaggle_test
                         inner join kaggle_breweries b
                         on a.brewery_id = b.brewery_id
                         where b.city = 'San Francisco';")
-
-#Let's view the data.
-
+```
+**Let's view the data.**
+```{r, fig.show='hold'}
 tbl(post,"kaggle_test") 
 ```
 
@@ -60,20 +60,22 @@ db_send_query(post,"drop table kaggle_test")
 ```{r, fig.show='hold'}
 tbl(post,"kaggle_beers")->beers
 tbl(post,"kaggle_breweries")->breweries
-
+```
+```{r, fig.show='hold'}
 inner_join(beers %>% 
              select(name,style,abv,brewery_id),
            breweries %>% select(brewery_id,brewery_name,city) %>%
              filter(city=="San Francisco"),
-           by=c("brewery_id","brewery_id")) %>% compute(name = "kaggle_test",temporary=F)
-
-#Let's view the data.
-
+           by=c("brewery_id","brewery_id")) %>% 
+  compute(name = "kaggle_test")
+```
+**Let's view the data.**
+```{r, fig.show='hold'}
 tbl(post,"kaggle_test") 
 ```
 
 ```{r, fig.show='hold'}
-db_drop_table(post$con,"kaggle_test")
+db_drop_table(post,"kaggle_test")
 ```
 
 ## Deeper look into dplyr
@@ -102,7 +104,7 @@ We have used alot of features within the connectR package, however connectR has 
 Let's start with a complicated dataset.
 
 ```{r, fig.show='hold'}
-read_csv("D:/Program_Files/R_Code/Projects/Kaggle/1. Data/Pokemon.csv")-> Pokemon
+read_csv("D:/Program_Files/R_Code/Projects/Kaggle/1. Data/Pokemon.csv")->Pokemon
 names(Pokemon)
 ```
 This data.frame contains " " and "." within the variable titles. This can causes issues when sending this data frame to a database. However connectR has some built in feature to handle this. let's see how connectR can handle this situation.
@@ -143,31 +145,45 @@ tbl(post,sql("select
               inner join 
                 pg_class i
                 on ix.indexrelid = i.oid")) %>% 
-  filter(attnum==any(indkey),
-         relkind == 'r',
-         table_name  %like% 'test%') %>%
+  filter(relkind == 'r',
+         table_name  == 'testtable') %>% 
   select (1,3,type)
 ```
 Here we can use a combination of SQL and R code to query the database. From here we can see that primary keys "x" and "name" have been create, also "type_1", "type_2" has been created as indexes. From this we can see connectR offers alot of functionality for R to connect databases.
 
 Lets clear up the database.
 ```{r, fig.show='hold'}
-db_drop_table(post$con,"testtable")
+db_drop_table(post,"testtable")
 ```
 
 ## How to transfer tables from intial database to another: `copy_loop_to`
 Finally connectR allows tables to be transferred from the initial database to another. This is helpful when 2 databases do not communicate with one another. `copy_loop_to` transfers tables in batch so that it doesn't overload R's memory. `copy_loop_to` will only send data to a existing table on the target database. To do this we can use the `db_create_primary` function to create an empty table with primary keys or indexes. We can the use `copy_loop_to` function for the transfer.
 
-```{r, fig.show='hold'}
-tbl(post,sql("select * from kaggle_beers")) %>% collect->test
-
-db_create_primary(post, "testtable", test, c("x1","name"))
-
-copy_loop_to(conn1=post, name="testtable", n=100, statement="select * from kaggle_beers")
+```
+tbl(post,sql("Select top 1
+                Account_Year_Week, 
+                Season, 
+                Max(Cal_Date) as Week_Ending 
+              from cis.CMI_Calendar 
+              group by 1,2")) %>% collect->test
+```
+```
+SQL<-"Select	
+        Account_Year_Week, 
+        Season, 
+        Max(Cal_Date) as Week_Ending 
+      from cis.CMI_Calendar 
+      group by 1,2"
+```
+```
+db_create_primary(post, "testtable", test, c("Account_Year_Week","Week_Ending"))
+```
+```
+copy_loop_to(conn1=post, conn2=post, name="testtable", n=100, statement=SQL)
 ```
 **NOTE: If `conn2` is not provided then `copy_loop_to` will send the table's data to `conn1` connection. **
 
 Clearing down database.
-```{r, fig.show='hold'}
-db_drop_table(post$con,"testtable")
+```
+db_drop_table(post,"testtable")
 ```
